--- a/src/components/antd/button-gradient/s.module.scss
+++ b/src/components/antd/button-gradient/s.module.scss
@@ -15,6 +15,7 @@
     padding-top: 0 !important;
     position: relative;
     width: 100%;
+    z-index: 0;
 
     > span {
       position: relative;
