--- a/src/components/custom/token-amount/s.module.scss
+++ b/src/components/custom/token-amount/s.module.scss
@@ -79,63 +79,16 @@
   &.healthFactorVariantReverse {
     :global(.ant-slider-track),
     &:global(.ant-slider:hover .ant-slider-track) {
-      background-image: linear-gradient(90deg, #ff4c8c 0%, #67d772 100%);
+      background-image: none;
     }
   }
   
   &.healthFactorVariant {
     :global(.ant-slider-track),
     &:global(.ant-slider:hover .ant-slider-track) {
-      background-image: linear-gradient(90deg, #67d772 0%, #ff4c8c 100%);
+      background-image: none;
     }
   }
-
-  // TODO: make the color behavior "unveil" like slider above
-  // but with green->pink gradient / green-> pink respecitvely
-  // &.healthFactorVariantReverse{
-  //   :global(.ant-slider-rail),
-  //   &:global(.ant-slider:hover .ant-slider-rail) {
-  //     background-image: linear-gradient(90deg, #ff4c8c 0%, #67d772 100%);
-  //   }
-  // }
-
-  // &.healthFactorVariant{
-  //   :global(.ant-slider-rail),
-  //   &:global(.ant-slider:hover .ant-slider-rail) {
-  //     background-image: linear-gradient(90deg, #67d772 0%, #ff4c8c 100%);
-  //   }
-  // }
-
-  // &.healthFactorVariant,
-  // &.healthFactorVariantReverse {
-  //   :global(.ant-slider-track),
-  //   &:global(.ant-slider:hover .ant-slider-track) {
-  //     background-color: transparent;
-  //     background-image: none;
-  //   }
-
-  //   :global(.ant-slider-handle) {
-  //     --dimensions: 24px;
-
-  //     &,
-  //     &:hover {
-  //       background: transparent;
-  //       border: 7px solid #fff;
-  //       height: var(--dimensions);
-  //       margin-top: -8px;
-  //       width: var(--dimensions);
-
-  //       &::after {
-  //         background: #fff;
-  //       }
-  //     }
-  //   }
-
-  //   &:global(.ant-slider:hover .ant-slider-handle) {
-  //     border-color: #fff !important;
-  //   }
-  // }
-
 }
 
 .iconsWrapper {
