--- a/src/components/custom/token-amount/s.module.scss
+++ b/src/components/custom/token-amount/s.module.scss
@@ -76,6 +76,22 @@
     }
   }
 
+  &.sliderDisabled {
+    :global(.ant-slider-track) {
+      background-image: none !important;
+      background-color: none !important;
+    }
+
+    :global(.ant-slider-handle) {
+      background: var(--theme-border-color);
+    }
+
+    :global(.ant-slider-handle),
+    &:global(.ant-slider-disabled .ant-slider-handle) {
+      border: 4px solid var(--theme-card-color) !important;
+    }
+  }
+
   &.healthFactorVariantReverse {
     :global(.ant-slider-track),
     &:global(.ant-slider:hover .ant-slider-track) {
