--- a/pages/auctions/[auctionId]/buy/s.module.scss
+++ b/pages/auctions/[auctionId]/buy/s.module.scss
@@ -183,10 +183,7 @@
 }
 
 .summary {
-  border-radius: 4px;
-  border: 1px solid var(--theme-border-color);
-  margin-bottom: 24px;
-  padding: 16px;
+  padding: 24px 0 0 0;
 }
 
 .summaryRow {
