--- a/pages/auctions/[auctionId]/buy/s.module.scss
+++ b/pages/auctions/[auctionId]/buy/s.module.scss
@@ -133,6 +133,11 @@
   grid-template-columns: 1fr;
 }
 
+
+.icon {
+  margin-left: 8px;
+}
+
 .backButton {
   background-color: transparent;
   border: none;
