--- a/pages/your-positions/[positionId]/manage/s.module.scss
+++ b/pages/your-positions/[positionId]/manage/s.module.scss
@@ -7,6 +7,7 @@
 .top {
   padding: var(--theme-common-card-padding) var(--theme-common-card-padding) 28px;
 }
+
 .summary {
   padding: 24px 0 0 0;
 }
@@ -105,4 +106,12 @@
   font-weight: 500;
   line-height: 1.2;
   margin: 0;
+}
+
+.balanceContainer {
+  display: flex;
+}
+
+.settings {
+  margin-left: 12px;
 }
